--- a/authorizeSever/src/main/resources/static/index.html
+++ b/authorizeSever/src/main/resources/static/index.html
@@ -13,25 +13,18 @@
     <script type="text/javascript" src="/webjars/js-cookie/js.cookie.js"></script>
 </head>
 <body>
-<h1>Demo</h1>
-<div class="container"></div>
-<div class="container unauthenticated">
-    With Facebook: <a href="/login">click here</a>
-</div>
-<div class="container authenticated" style="display:none">
-    Logged in as: <span id="user"></span>
-</div>
-<div class="container authenticated">
-    Logged in as: <span id="user"></span>
-    <div>
-        <button onClick="logout()" class="btn btn-primary">Logout</button>
-    </div>
+<h1>login</h1>
+<div class="container">
     <div class="container unauthenticated">
+        With Facebook: <a href="/login/facebook">click here</a>
+    </div>
+    <div>
+        With Github: <a href="/login/github">click here</a>
+    </div>
+    <div class="container authenticated" style="display:none">
+        Logged in as: <span id="user"></span>
         <div>
-            With Facebook: <a href="/login/facebook">click here</a>
-        </div>
-        <div>
-            With Github: <a href="/login/github">click here</a>
+            <button onClick="logout()" class="btn btn-primary">Logout</button>
         </div>
     </div>
 </div>
@@ -49,21 +42,22 @@
         $(".unauthenticated").show();
         $(".authenticated").hide();
     })
-    return true;
+     return true;
     }
 
     $.ajaxSetup({
-    beforeSend : function(xhr, settings) {
-    if (settings.type == 'POST' || settings.type == 'PUT'
-        || settings.type == 'DELETE') {
-        if (!(/^http:.*/.test(settings.url) || /^https:.*/
-            .test(settings.url))) {
-        // Only send the token to relative URLs i.e. locally.
-        xhr.setRequestHeader("X-XSRF-TOKEN",
-            Cookies.get('XSRF-TOKEN'));
+        beforeSend : function(xhr, settings) {
+          if (settings.type == 'POST' || settings.type == 'PUT'
+              || settings.type == 'DELETE') {
+            if (!(/^http:.*/.test(settings.url) || /^https:.*/
+                .test(settings.url))) {
+              // Only send the token to relative URLs i.e. locally.
+              xhr.setRequestHeader("X-XSRF-TOKEN",
+                  Cookies.get('XSRF-TOKEN'));
+            }
+          }
         }
-    }
-    }
     });
+
 </script>
 </html>
