--- a/authorizeSever/src/main/resources/static/index.html
+++ b/authorizeSever/src/main/resources/static/index.html
@@ -16,10 +16,24 @@
 <h1>login</h1>
 <div class="container">
     <div class="container unauthenticated">
-        With Facebook: <a href="/login/facebook">click here</a>
-    </div>
-    <div>
-        With Github: <a href="/login/github">click here</a>
+        <form class="form-signin" method="post" action="login">
+            <div class="form-group">
+                <label>이메일</label>
+                <input type="text" class="form-control" name="username" placeholder="Email" required>
+            </div>
+            <div class="form-group">
+                <label>패스워드</label>
+                <input type="password" class="form-control" name="password" placeholder="Password" required>
+            </div>
+            <input name="${_csrf.parameterName}" type="hidden" value="${_csrf.token}">
+            <button type="submit" class="btn btn-primary">Sign in</button>
+        </form>
+        <div>
+            With Facebook: <a href="/login/facebook">click here</a>
+        </div>
+        <div>
+            With Github: <a href="/login/github">click here</a>
+        </div>
     </div>
     <div class="container authenticated" style="display:none">
         Logged in as: <span id="user"></span>
@@ -30,34 +44,35 @@
 </div>
 </body>
 <script type="text/javascript">
-    $.get("/user", function(data) {
-        $("#user").html(data.userAuthentication.details.name);
-        $(".unauthenticated").hide()
-        $(".authenticated").show()
-    });
+<!--    $.get("/user", function(data) {-->
+<!--        $("#user").html(data.userAuthentication.details.name);-->
+<!--        $(".unauthenticated").hide()-->
+<!--        $(".authenticated").show()-->
+<!--        console.log(JSON.stringify(data))-->
+<!--    });-->
 
-    var logout = function() {
-    $.post("/logout", function() {
-        $("#user").html('');
-        $(".unauthenticated").show();
-        $(".authenticated").hide();
-    })
-     return true;
-    }
+<!--    var logout = function() {-->
+<!--    $.post("/logout", function() {-->
+<!--        $("#user").html('');-->
+<!--        $(".unauthenticated").show();-->
+<!--        $(".authenticated").hide();-->
+<!--    })-->
+<!--     return true;-->
+<!--    }-->
 
-    $.ajaxSetup({
-        beforeSend : function(xhr, settings) {
-          if (settings.type == 'POST' || settings.type == 'PUT'
-              || settings.type == 'DELETE') {
-            if (!(/^http:.*/.test(settings.url) || /^https:.*/
-                .test(settings.url))) {
-              // Only send the token to relative URLs i.e. locally.
-              xhr.setRequestHeader("X-XSRF-TOKEN",
-                  Cookies.get('XSRF-TOKEN'));
-            }
-          }
-        }
-    });
+<!--    $.ajaxSetup({-->
+<!--        beforeSend : function(xhr, settings) {-->
+<!--          if (settings.type == 'POST' || settings.type == 'PUT'-->
+<!--              || settings.type == 'DELETE') {-->
+<!--            if (!(/^http:.*/.test(settings.url) || /^https:.*/-->
+<!--                .test(settings.url))) {-->
+<!--              // Only send the token to relative URLs i.e. locally.-->
+<!--              xhr.setRequestHeader("X-XSRF-TOKEN",-->
+<!--                  Cookies.get('XSRF-TOKEN'));-->
+<!--            }-->
+<!--          }-->
+<!--        }-->
+<!--    });-->
 
 </script>
 </html>
