--- a/authorizeSever/src/main/resources/static/index.html
+++ b/authorizeSever/src/main/resources/static/index.html
@@ -28,6 +28,7 @@
             <input name="${_csrf.parameterName}" type="hidden" value="${_csrf.token}">
             <button type="submit" class="btn btn-primary">Sign in</button>
         </form>
+        <a href="/sign-up/oauth">회원 가입</a>
         <div>
             With Facebook: <a href="/login/facebook">click here</a>
         </div>
