--- a/authorizeSever/src/main/resources/static/index.html
+++ b/authorizeSever/src/main/resources/static/index.html
@@ -8,72 +8,163 @@
     <meta name="viewport" content="width=device-width"/>
     <base href="/"/>
     <link rel="stylesheet" type="text/css" href="/webjars/bootstrap/css/bootstrap.min.css"/>
+    <style>
+        body{
+            display: table-cell;
+            vertical-align: middle;
+            background-color: #e0f2f1 !important;
+        }
+
+        html {
+            display: table;
+            margin: auto;
+        }
+
+        html, body {
+            height: 100%;
+        }
+
+        .medium-small {
+            font-size: 0.9rem;
+            margin: 0;
+            padding: 0;
+        }
+
+        .login-form {
+            width: 280px;
+        }
+
+        .login-form-text {
+            text-transform: uppercase;
+            letter-spacing: 2px;
+            font-size: 0.8rem;
+        }
+
+        .login-text {
+            margin-top: -6px;
+            margin-left: -6px !important;
+        }
+
+        .margin {
+            margin: 0 !important;
+        }
+
+        .pointer-events {
+            pointer-events: auto !important;
+        }
+
+        .input-field >.material-icons  {
+            padding-top:10px;
+        }
+
+        .input-field div.error{
+            position: relative;
+            top: -1rem;
+            left: 3rem;
+            font-size: 0.8rem;
+            color:#FF4081;
+            -webkit-transform: translateY(0%);
+            -ms-transform: translateY(0%);
+            -o-transform: translateY(0%);
+            transform: translateY(0%);
+        }
+    </style>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/css/materialize.min.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <script type="text/javascript" src="/webjars/jquery/jquery.min.js"></script>
     <script type="text/javascript" src="/webjars/bootstrap/js/bootstrap.min.js"></script>
     <script type="text/javascript" src="/webjars/js-cookie/js.cookie.js"></script>
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"></script>
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/jquery-validation@1.17.0/dist/jquery.validate.min.js"></script>
 </head>
 <body>
-<h1>login</h1>
-<div class="container">
-    <div class="container unauthenticated">
-        <form class="form-signin" method="post" action="login">
-            <div class="form-group">
-                <label>이메일</label>
-                <input type="text" class="form-control" name="username" placeholder="Email" required>
-            </div>
-            <div class="form-group">
-                <label>패스워드</label>
-                <input type="password" class="form-control" name="password" placeholder="Password" required>
-            </div>
-            <input name="${_csrf.parameterName}" type="hidden" value="${_csrf.token}">
-            <button type="submit" class="btn btn-primary">Sign in</button>
-        </form>
-        <a href="/sign-up/oauth">회원 가입</a>
-        <div>
-            With Facebook: <a href="/login/facebook">click here</a>
-        </div>
-        <div>
-            With Github: <a href="/login/github">click here</a>
+    <div id="login-page" class="row">
+        <div class="col s12 z-depth-4 card-panel">
+            <form class="login-form" method="post" action="login">
+                <div class="row">
+                    <div class="input-field col s12 center">
+                        <!-- <img src="images/login-logo.png" alt="" class="circle responsive-img valign profile-image-login"/> -->
+                        <p class="center login-form-text">LOGIN</p>
+                    </div>
+                </div>
+                <div class="row margin">
+                    <div class="input-field col s12">
+                        <!-- <i class="mdi-social-person-outline prefix"></i> -->
+                        <i class="material-icons prefix">account_circle</i>
+                        <input id="username" name="username" type="text" style="background-image: url(&quot;data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR4nGP6zwAAAgcBApocMXEAAAAASUVORK5CYII=&quot;); cursor: auto;"/>
+                        <label for="username" data-error="wrong" class="center-align" data-success="right">ID or Email</label>
+                    </div>
+                </div>
+                <div class="row margin">
+                    <div class="input-field col s12">
+                        <!-- <i class="mdi-action-lock-outline prefix"></i> -->
+                        <i class="material-icons prefix">vpn_key</i>
+                        <input id="password" name="password" type="password" style="background-image: url(&quot;data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR4nGP6zwAAAgcBApocMXEAAAAASUVORK5CYII=&quot;);"/>
+                        <label for="password">Password</label>
+                    </div>
+                </div>
+
+<!--                <div class="row">-->
+<!--                    <div class="input-field col s12 login-text">-->
+<!--                        <input type="checkbox" id="test6" checked="checked" />-->
+<!--                        <label for="test6" class="pointer-events">Remember me</label>-->
+<!--                    </div>-->
+<!--                </div>-->
+
+                <div class="row">
+                    <div class="input-field col s12">
+                        <button type="submit" class="btn waves-effect waves-light col s12">Login</button>
+                    </div>
+                    <div class="input-field col s12">
+                        <a href="/login/facebook" class="btn waves-effect waves-light col s12 light-blue darken-4">FACEBOOK Login</a>
+                    </div>
+                    <div class="input-field col s12">
+                        <a href="/login/github" class="btn waves-effect waves-light col s12 black">GITHUB Login</a>
+                    </div>
+                </div>
+
+                <div class="row">
+                    <div class="input-field col s6 m6 l6">
+                        <p class="margin medium-small"><a href="/sign-up/oauth">Register Now!</a></p>
+                    </div>
+<!--                    <div class="input-field col s6 m6 l6">-->
+<!--                        <p class="margin right-align medium-small"><a href="page-forgot-password.html">Forgot password ?</a></p>-->
+<!--                    </div>-->
+                </div>
+            </form>
         </div>
     </div>
-    <div class="container authenticated" style="display:none">
-        Logged in as: <span id="user"></span>
-        <div>
-            <button onClick="logout()" class="btn btn-primary">Logout</button>
-        </div>
-    </div>
-</div>
 </body>
 <script type="text/javascript">
-<!--    $.get("/user", function(data) {-->
-<!--        $("#user").html(data.userAuthentication.details.name);-->
-<!--        $(".unauthenticated").hide()-->
-<!--        $(".authenticated").show()-->
-<!--        console.log(JSON.stringify(data))-->
-<!--    });-->
-
-<!--    var logout = function() {-->
-<!--    $.post("/logout", function() {-->
-<!--        $("#user").html('');-->
-<!--        $(".unauthenticated").show();-->
-<!--        $(".authenticated").hide();-->
-<!--    })-->
-<!--     return true;-->
-<!--    }-->
-
-<!--    $.ajaxSetup({-->
-<!--        beforeSend : function(xhr, settings) {-->
-<!--          if (settings.type == 'POST' || settings.type == 'PUT'-->
-<!--              || settings.type == 'DELETE') {-->
-<!--            if (!(/^http:.*/.test(settings.url) || /^https:.*/-->
-<!--                .test(settings.url))) {-->
-<!--              // Only send the token to relative URLs i.e. locally.-->
-<!--              xhr.setRequestHeader("X-XSRF-TOKEN",-->
-<!--                  Cookies.get('XSRF-TOKEN'));-->
-<!--            }-->
-<!--          }-->
-<!--        }-->
-<!--    });-->
-
+    $(".login-form").validate({
+      rules: {
+        username: {
+          required: true,
+          minlength: 4
+        },
+        password: {
+          required: true,
+          minlength: 5
+        }
+      },
+      //For custom messages
+      messages: {
+        username:{
+          required: "Enter a username",
+          minlength: "Enter at least 4 characters"
+        }
+      },
+      errorElement : 'div',
+      errorPlacement: function(error, element) {
+        var placement = $(element).data('error');
+        if (placement) {
+          $(placement).append(error)
+        } else {
+          error.insertAfter(element);
+        }
+      }
+    });
 </script>
 </html>
+
+
