--- a/authorizeSever/src/main/resources/static/index.html
+++ b/authorizeSever/src/main/resources/static/index.html
@@ -68,6 +68,11 @@
             -o-transform: translateY(0%);
             transform: translateY(0%);
         }
+
+        #info{
+            color:#FF4081;
+            text-align: center;
+        }
     </style>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/css/materialize.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
@@ -92,7 +97,7 @@
                         <!-- <i class="mdi-social-person-outline prefix"></i> -->
                         <i class="material-icons prefix">account_circle</i>
                         <input id="username" name="username" type="text" style="background-image: url(&quot;data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR4nGP6zwAAAgcBApocMXEAAAAASUVORK5CYII=&quot;); cursor: auto;"/>
-                        <label for="username" data-error="wrong" class="center-align" data-success="right">ID or Email</label>
+                        <label for="username" data-error="wrong" class="center-align" data-success="right">아이디 또는 이메일</label>
                     </div>
                 </div>
                 <div class="row margin">
@@ -100,16 +105,12 @@
                         <!-- <i class="mdi-action-lock-outline prefix"></i> -->
                         <i class="material-icons prefix">vpn_key</i>
                         <input id="password" name="password" type="password" style="background-image: url(&quot;data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR4nGP6zwAAAgcBApocMXEAAAAASUVORK5CYII=&quot;);"/>
-                        <label for="password">Password</label>
+                        <label for="password">비밀 번호</label>
                     </div>
                 </div>
 
-<!--                <div class="row">-->
-<!--                    <div class="input-field col s12 login-text">-->
-<!--                        <input type="checkbox" id="test6" checked="checked" />-->
-<!--                        <label for="test6" class="pointer-events">Remember me</label>-->
-<!--                    </div>-->
-<!--                </div>-->
+                <div class="row" id='info'>
+                </div>
 
                 <div class="row">
                     <div class="input-field col s12">
@@ -125,7 +126,7 @@
 
                 <div class="row">
                     <div class="input-field col s6 m6 l6">
-                        <p class="margin medium-small"><a href="/sign-up/oauth">Register Now!</a></p>
+                        <p class="margin medium-small"><a href="/sign-up/oauth">회원 가입</a></p>
                     </div>
 <!--                    <div class="input-field col s6 m6 l6">-->
 <!--                        <p class="margin right-align medium-small"><a href="page-forgot-password.html">Forgot password ?</a></p>-->
@@ -164,6 +165,22 @@
         }
       }
     });
+
+    var param = document.location.href.split('?');
+
+    console.log(param)
+
+    if(param[1] == 'error'){
+        $("#info").show()
+        $("#info").text("아이디, 이메일과 비밀번호를 확인해주세요")
+    }else if(param[1] == 'registration'){
+        $("#info").show()
+        $("#info").text("회원 가입 되었습니다. 로그인을 해주세요")
+    }else{
+        $("#info").hide()
+    }
+
+
 </script>
 </html>
 
