socialMemberInfo 테이블 추가 - sns 로그인 후 회원 가입시 sns provider 및 principal로  socialMemberInfo에  insert 및 sns 로그인시 이미 가입된 회원이 확인 되면 해당 회원에 socialMemberInfo 테이블에 insert

--- a/authorizeSever/src/main/resources/static/index.html
+++ b/authorizeSever/src/main/resources/static/index.html
@@ -168,17 +168,21 @@
 
     var param = document.location.href.split('?');
 
-    console.log(param)
-
-    if(param[1] == 'error'){
-        $("#info").show()
-        $("#info").text("아이디, 이메일과 비밀번호를 확인해주세요")
-    }else if(param[1] == 'registration'){
-        $("#info").show()
-        $("#info").text("회원 가입 되었습니다. 로그인을 해주세요")
-    }else{
+    if(param.length > 1){
+        if(param[1].includes('error')){
+            $("#info").show()
+            $("#info").text("아이디, 이메일과 비밀번호를 확인해주세요")
+        }else if(param[1].includes('registration')){
+            $("#info").show()
+            $("#info").text("회원 가입 되었습니다. 로그인을 해주세요")
+        }else{
+            $("#info").hide()
+        }
+    } else{
         $("#info").hide()
     }
+
+
 
 
 </script>
