KAKAO 로그인 & Google 로그인 추가

--- a/authorizeSever/src/main/resources/static/index.html
+++ b/authorizeSever/src/main/resources/static/index.html
@@ -73,6 +73,7 @@
             color:#FF4081;
             text-align: center;
         }
+
     </style>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/css/materialize.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
@@ -124,6 +125,9 @@
                     </div>
                     <div class="input-field col s12">
                         <a href="/login/kakao" class="btn waves-effect waves-light col s12 yellow">KAKAO Login</a>
+                    </div>
+                    <div class="input-field col s12">
+                        <a href="/login/google" class="btn waves-effect waves-light col s12 blue lighten-5">google Login</a>
                     </div>
                 </div>
 
